crates/agentwatch/src/snapshots/agentwatch__tui__tests__agentwatch_tui_compact.snap
---
source: crates/agentwatch/src/tui_tests.rs
assertion_line: 437
expression: "render_snapshot(&state, &mut cache, 96, 24)"
---
 AgentWatch   repo:routa-js  branch:main  agents:2 active:1  dirty:2  unknown:1  synced 2m ago
┌Files─────────────────────────────────────────────────────────────────────────────────────────┐
│ ALL FILES  2 files  commits:...                                                              │
│──────────────────────────────────────────────────────────────────────────────────────────────│
│> tui.rs                                                                                      │
│  ...gentwatch/src  M  +38 -5     4m                                                          │
│  route.ts                                                                                    │
│  .../api/a2a/card  D  -12        5m                                                          │
│                                                                                              │
│                                                                                              │
│                                                                                              │
│                                                                                              │
│                                                                                              │
│                                                                                              │
│                                                                                              │
└──────────────────────────────────────────────────────────────────────────────────────────────┘
┌Details───────────────────────────────────────────────────────────────────────────────────────┐
│tui.rs                                                                                        │
│crates/agentwatch/src                                                                         │
│Last by: impl-buddy                                                                           │
│Modified: 4m                                                                                  │
│Lines: ...  Size: ...  Git changes: ...                                                       │
└──────────────────────────────────────────────────────────────────────────────────────────────┘
↑↓ select  u unknown  d preview  Pg scroll  q quit
