crates/agentwatch/src/snapshots/agentwatch__tui__tests__agentwatch_tui_file_preview.snap
---
source: crates/agentwatch/src/tui_tests.rs
assertion_line: 427
expression: "render_snapshot(&state, &mut cache, 120, 24)"
---
 AgentWatch   repo:routa-js  branch:main  agents:2 active:1  dirty:2  unknown:1  synced 2m ago
┌Files───────────────────────────────────────────────────────────────────────────────┐┌Details─────────────────────────┐
│ ALL FILES  2 files  commits:...                                                    ││tui.rs                          │
│────────────────────────────────────────────────────────────────────────────────────││crates/agentwatch/src           │
│> tui.rs                                                   ...h/src  M  +38 -5     4││Last by: impl-buddy             │
│  route.ts                                                 .../card  D  -12        5││Modified: 4m                    │
│                                                                                    ││Lines: ...  Size: ...  Git      │
│                                                                                    ││changes: ...                    │
│                                                                                    ││                                │
│                                                                                    ││                                │
│                                                                                    ││                                │
│                                                                                    ││                                │
│                                                                                    ││                                │
│                                                                                    ││                                │
│                                                                                    ││                                │
│                                                                                    ││                                │
│                                                                                    ││                                │
│                                                                                    ││                                │
│                                                                                    ││                                │
│                                                                                    ││                                │
│                                                                                    ││                                │
│                                                                                    ││                                │
└────────────────────────────────────────────────────────────────────────────────────┘└────────────────────────────────┘
Tab focus  ↑↓ select  u unknown  d preview/diff  Pg scroll  f follow:on  T theme  Esc clear  q quit
