crates/agentwatch/src/snapshots/agentwatch__tui__tests__agentwatch_tui_search.snap
---
source: crates/agentwatch/src/tui_tests.rs
assertion_line: 415
expression: "render_snapshot(&state, &mut cache, 120, 24)"
---
 AgentWatch   repo:routa-js  branch:main  agents:2 active:1  dirty:1  unknown:1  synced 2m ago
┌Files───────────────────────────────────────────────────────────────────────────────┐┌Details─────────────────────────┐
│ ALL FILES  1 files  commits:...                                                    ││route.ts                        │
│────────────────────────────────────────────────────────────────────────────────────││src/app/api/a2a/card            │
│> route.ts                                                 .../card  D  -12        5││Last by: unknown                │
│                                                                                    ││Modified: 5m                    │
│                                                                                    ││Lines: ...  Size: ...  Git      │
│                                                                                    ││changes: ...                    │
│                                                                                    ││                                │
│                                                                                    ││                                │
│                                                                                    ││                                │
│                                                                                    ││                                │
│                                                                                    ││                                │
│                                                                                    ││                                │
│                                                                                    ││                                │
│                                                                                    ││                                │
│                                                                                    ││                                │
│                                                                                    ││                                │
│                                                                                    ││                                │
│                                                                                    ││                                │
│                                                                                    ││                                │
│                                                                                    ││                                │
└────────────────────────────────────────────────────────────────────────────────────┘└────────────────────────────────┘
Tab focus  ↑↓ select  u unknown  d preview/diff  Pg scroll  f follow:on  T theme  Esc clear  q quit
