crates/agentwatch/src/snapshots/agentwatch__tui__tests__agentwatch_tui_summary.snap
---
source: crates/agentwatch/src/tui_tests.rs
assertion_line: 392
expression: "render_snapshot(&state, &cache, 120, 28)"
---
 AgentWatch   repo:routa-js  branch:main    SESSION VIEW · FOLLOW ON  rpc:socket  dirty:1  unknown:0  synced 2m ago
┌Sessions────────────────────────┐┌Files─────────────────────────────────────────┐┌Details─────────────────────────────┐
│> impl-buddy  ACTIVE            ││ BY SESSION    GLOBAL    REVIEW UNKNOWN       ││tui.rs                              │
│gpt-5.4  pane %12  3m ago       ││1 files  M:1 D:0  E:1 I:0 U:0                 ││crates/agentwatch/src               │
│1 files  E:1 I:0 U:0            ││──────────────────────────────────────────────││Last by: impl-buddy                 │
│  test-master  IDLE             ││> tui.rs                                      ││Modified: <ts> (4m)             │
│gpt-5.4-mini  pane %18  1h ago  ││  crates/agentwatch/src                       ││State: dirty  Confidence: high      │
│1 files  E:0 I:0 U:0            ││M  +38 -5     4m  EXACT                       ││Lines: 0  Size: 0 B                 │
│  Unknown / review  UNKNOWN     ││                                              ││Created: untracked  Git changes: 0  │
│watch-only owner  pane ?  2m ago││                                              ││Why                                 │
│1 files  E:0 I:0 U:1            ││                                              ││- matched a hook event with concrete│
│                                ││                                              │└────────────────────────────────────┘
│                                ││                                              │┌Diff Summary────────────────────────┐
│                                ││                                              ││@@ -1,2 +1,3 @@                     │
│                                ││                                              ││-use old                            │
│                                ││                                              ││+use new                            │
│                                ││                                              ││+use cache                          │
│                                ││                                              ││                                    │
│                                ││                                              ││                                    │
│                                ││                                              ││                                    │
│                                ││                                              ││                                    │
└────────────────────────────────┘└──────────────────────────────────────────────┘└────────────────────────────────────┘
┌Event Stream (all)────────────────────────────────────────────────────────────────────────────────────────────────────┐
│<ts>  WATCH  modify   crates/agentwatch/src/tui.rs                                                                │
│<ts>  HOOK   live-hook-check Edit Write                                                                           │
│<ts>  GIT    post-commit main                                                                                     │
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
Tab focus  ↑↓ select  Enter inspect  / search  u unknown  a assign  o open  g git diff  PgUp/PgDn scroll  f follow:on  T
